adjust internal dependencies/remove garbage collector parameter (invalid in java 21)